# TermNexus

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
termnexus/: __init__.py  cli.py  router.py  session.py  tui.py  workspace.py
tests/: test_router.py  test_session.py  test_workspace.py
